fix for compose